2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y: Delete spaces surrounding = in %name-prefix directive.

2004-03-01  Petter Risholm  <risholm@idi.ntnu.no>

        * Cell.cc (Cell::cat): New function.
        * Cell.h: Provide decl.

        * oct-map.cc (Octave_map::cat): New function.
        * oct-map.h: Provide decl.

        * data.cc (Fcat): Speedup implementation.

        * data.cc (Fhorzcat, Fvertcat): New functions.

        * Array-tc.cc: Instantiate cat function.

2004-03-01  David Bateman  <dbateman@free.fr>

	* ls-hdf5.cc (save_hdf5_empty, load_hdf5_empty): New functions
	to save/load empty matrices keeping their dimensions.
	* ls-hdf5.h (save_hdf5_empty, load_hdf5_empty): Provide decls.

	* ov-re-mat.cc (save_hdf5, load_hdf5): Cleanup, check empty matrix.
	* ov-cx-mat.cc (save_hdf5, load_hdf5): Ditto.
	* ov-bool-mat.cc (save_hdf5, load_hdf5): Ditto.

	* ov-str-mat.cc (save_ascoo, load_ascii, save_binary,
	load_binary, save_hdf5, load_hdf5): Cleanup, check empty matrix,
	and save/load N-d arrays.
 
2004-02-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.cc (execute_startup_files): Don't find current directory
	for absolute name of local_rc until after executing home_rc.

2004-02-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* input.cc (input_event_hook): Return type is now int.  Return 0.

	* file-io.cc (do_stream_open): Don't call ::error if stream can't
	be created.  Don't call ::fopen if arch is invalid.  Set error
	state for stream if fopen fails.
	* oct-stream.h (octave_stream::error (const char *)): New function.
	(octave_stream::error (const std::string&)): Now public.

2004-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-io.cc (Fftell): Return long integer instead of streamoff_array.
	(do_stream_open): Create octave_stdiostream instead of octave_fstream.

	* oct-fstrm.cc (octave_fstream::seek, octave_fstream::tell):
	Always fail.  Signatures now match C library functionsb.